--- a/Nutrition-Ai-ChatBot/content/templates/main/index.html
+++ b/Nutrition-Ai-ChatBot/content/templates/main/index.html
@@ -1,17 +1,43 @@
 {% extends 'layouts/default/page.html' %}
-
+{% load static %}
 {% load i18n %}
 
 {% block content %}
 
-    {% if request.user.is_authenticated %}
+<!--    {% if request.user.is_authenticated %}-->
 
-        {% trans 'Your username is' %} <b>{{ request.user.username }}</b>.
+<!--        {% trans 'Your username is' %} <b>{{ request.user.username }}</b>.-->
 
-    {% else %}
+<!--    {% else %}-->
 
-        {% trans 'You are a guest.' %}
+<!--        {% trans 'You are a guest.' %}-->
 
-    {% endif %}
+
+
+<!--    {% endif %}-->
+
+ <body>
+    <button class="chatbot-toggler">
+      <span class="material-symbols-rounded">mode_comment</span>
+      <span class="material-symbols-outlined">close</span>
+    </button>
+    <div class="chatbot">
+      <header>
+        <h2>Chatbot</h2>
+        <span class="close-btn material-symbols-outlined">close</span>
+      </header>
+      <ul class="chatbox">
+        <li class="chat incoming">
+          <span class="material-symbols-outlined">smart_toy</span>
+          <p>Hi there 👋<br>How can I help you today?</p>
+        </li>
+      </ul>
+      <div class="chat-input">
+        <textarea placeholder="Enter a message..." spellcheck="false" required></textarea>
+        <span id="send-btn" class="material-symbols-rounded">send</span>
+      </div>
+    </div>
+
+  </body>
 
 {% endblock %}
