--- a/Nutrition-Ai-ChatBot/content/templates/main/index.html
+++ b/Nutrition-Ai-ChatBot/content/templates/main/index.html
@@ -30,6 +30,12 @@
                     <span class="material-symbols-outlined">smart_toy</span>
                     <p>Hi there 👋<br>How can I help you today?</p>
                 </li>
+                {% if default_message %}
+                    <li class="chat incoming">
+                        <span class="material-symbols-outlined">smart_toy</span>
+                        <p>{{ default_message|safe }}</p>
+                    </li>
+                {% endif %}
             </ul>
             <div class="chat-input">
                 <textarea placeholder="Enter a message..." spellcheck="false"
